# memory-wall

./: .gitignore  CLAUDE.md  Dockerfile  README.md  index.html  manifest.json  sw.js  记忆墙.html
backend/: main.py
memory-wall/: .gitignore  app.js  docker-compose.yml  pyproject.toml  style.css  sw.js  记忆墙.html
memory-wall/.github/workflows/: ci.yml
memory-wall/backend/: .env.example  Dockerfile  main.py  mcp_server.py  requirements.txt  shared.py
memory-wall/test/: test_api.py  test_shared.py
